--- a/app/src/style/app.scss
+++ b/app/src/style/app.scss
@@ -1,4 +1,34 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
+	margin: 0;
+	padding: 0;
+	background: #FCFCFC;
+}
+
+.app > .content {
+	margin: 0 auto;
+	max-width: 1105px;
+}
+
+.scrim {
+	z-index: -99;
+	user-select: none;
+	position: absolute;
+	top:0;
+	left:0;
+	right:0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	background: dodgerblue;
+	justify-content: center;
+	align-items: center;
+	display: flex;
+}
+
+.scrim > * {
+	display: block;
+	border-radius: 50%;
+	background: green;
 }
