--- a/app/src/style/character.scss
+++ b/app/src/style/character.scss
@@ -1,12 +1,30 @@
 .character {
 	display: block;
+	min-width: 200px;
+	max-width: 200px;
+	background: white;
+	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+				0 1px 10px 0 rgba(0, 0, 0, 0.12),
+				0 2px 4px -1px rgba(0, 0, 0, 0.4);
+}
+
+.character > * {
+	transition: box-shadow ease-in-out 150sms;
 }
 
 .character .character-name {
-	font-size: 32px;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 700;
+	font-style: italic;
+	color: rgba( 255, 255, 255, .8);
+	font-size: 30px;
 	text-align: center;
-	margin-bottom: 15px;
+	margin-bottom: 7px;
 	white-space: nowrap;
+	overflow: hidden;
+}
+
+.character .character-icon {
 	overflow: hidden;
 }
 
@@ -18,4 +36,22 @@
 
 .character > .character-stats-container > * {
 	min-width: 20%;
+}
+
+
+
+
+.characterFullView {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+
+
+	// box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    //               0 1px 10px 0 rgba(0, 0, 0, 0.12),
+    //               0 2px 4px -1px rgba(0, 0, 0, 0.4);
+}
+
+.characterFullView > .scrollable {
+	overflow-y: scroll;
 }
