--- a/app/src/style/stat.scss
+++ b/app/src/style/stat.scss
@@ -1,19 +1,24 @@
+.stat {
+	min-width: 25%;
+}
 .stat > * {
-	display: block;
-	text-align: center;
+	text-align: left;
 }
 
 .stat > .stat-name {
 	background: white;
-	padding: 5px;
+	padding: 0 8px 0 0;
 }
 
 .stat > .stat-value {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 700;
+	font-style: italic;
+	font-size: 24px;
 }
 
 .statCategory {
-	margin: 5px;
-	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
-                  0 1px 10px 0 rgba(0, 0, 0, 0.12),
-                  0 2px 4px -1px rgba(0, 0, 0, 0.4);
+	margin: 15px;
+	display: flex;
+	flex-flow: wrap;
 }
