--- a/app/src/style/character.scss
+++ b/app/src/style/character.scss
@@ -1,9 +1,10 @@
 .character {
 	display: block;
-	min-width: 200px;
-	max-width: 200px;
+	min-width: 250px;
+	width: 250px;
+	height: 300px;
 	background: white;
-	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+		box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
 				0 1px 10px 0 rgba(0, 0, 0, 0.12),
 				0 2px 4px -1px rgba(0, 0, 0, 0.4);
 }
@@ -16,9 +17,11 @@
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 700;
 	font-style: italic;
-	color: rgba( 255, 255, 255, .8);
+	/*color: rgba( 255, 255, 255, .8);
+	*/
+	/*color: rgba( 0, 0, 0, .8);*/
 	font-size: 30px;
-	text-align: center;
+	text-align: left;
 	margin-bottom: 7px;
 	white-space: nowrap;
 	overflow: hidden;
