--- a/app/src/style/stat.scss
+++ b/app/src/style/stat.scss
@@ -1,8 +1,10 @@
 .stat {
 	min-width: 25%;
+	
 }
 .stat > * {
 	text-align: left;
+	
 }
 
 .stat > .stat-name {
@@ -11,14 +13,15 @@
 }
 
 .stat > .stat-value {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
-	font-style: italic;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
 	font-size: 24px;
+	color: white;
 }
 
 .statCategory {
 	margin: 15px;
 	display: flex;
 	flex-flow: wrap;
+	background: #1C1C1D;
 }
