--- a/app/src/style/header.scss
+++ b/app/src/style/header.scss
@@ -1,10 +1,22 @@
 .header {
-	background: white;
-	width: 100%;
-	color: #000;
-	text-align: center;
-	font-size: 32px;
+	height: 768px;
 	position: relative;
+}
+
+
+.header > .background {
+	position: absolute;
+	background: #232A2D;
+	width: 100%;
+	height: 100%;
+	color: white;
+
 	border: 1px solid #e0e0e0;
-	margin: 0 0 10px 0;
+	margin: 0;
+}
+.header > .intro {
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	font-size: 32px;
 }
