--- a/app/src/style/player.scss
+++ b/app/src/style/player.scss
@@ -7,8 +7,8 @@
 
 
 .player {
-	display: block;
-	margin-top: 50px;
+	display: flex;
+	margin: 50px 0;
 }
 
 .player-name {
@@ -16,6 +16,7 @@
 	font-weight: 700;
 	font-style: italic;
 	font-size: 40px;
+	color: rgba( 255, 255, 255, 1);
 }
 
 .player-avatar {
@@ -38,7 +39,7 @@
 }
 
 .player-sr > span:nth-of-type(2) {
-	color: red;
+	color: rgba( 255, 255, 255, 8);
 }
 
 .player-bg {
@@ -47,3 +48,21 @@
 	width: 100%;
 	height: 100%;
 }
+
+
+
+//player description
+
+p.player-description {
+	margin: 25px 0 0 25px;
+	color: rgba( 255, 255, 255, .9 );
+	font-size: 34px;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-style: italic;
+	font-weight: 700;
+}
+
+p.player-description .player-description-highlight {
+	font-size: 36px;
+}
+
