--- a/app/src/style/player.scss
+++ b/app/src/style/player.scss
@@ -12,9 +12,9 @@
 }
 
 .player-name {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
-	font-style: italic;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	/*font-style: italic;*/
 	font-size: 40px;
 	color: rgba( 255, 255, 255, 1);
 }
@@ -32,9 +32,9 @@
 
 
 .player-sr > span:first-of-type {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
-	font-style: italic;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	/*font-style: italic;*/
 	font-size: 32px;
 }
 
@@ -57,12 +57,15 @@ p.player-description {
 	margin: 25px 0 0 25px;
 	color: rgba( 255, 255, 255, .9 );
 	font-size: 34px;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-style: italic;
-	font-weight: 700;
+	font-family: 'Roboto', sans-serif;
+	/*font-style: italic;*/
+	font-weight: 100;
 }
 
 p.player-description .player-description-highlight {
+	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 36px;
+	font-weight: 700;
+
 }
 
