--- a/app/src/style/app.scss
+++ b/app/src/style/app.scss
@@ -12,6 +12,15 @@ body {
 	position: relative;
 }
 
+  @media (max-width: 500px) {
+	  .content {
+		width: 100%;
+		margin: 0 auto;
+		position: relative;
+	}
+  }
+
+
 .app > .content {
 	margin: 0 auto;
 	max-width: 1105px;
