--- a/app/src/style/characterList.scss
+++ b/app/src/style/characterList.scss
@@ -1,11 +1,22 @@
-.characterList {
-}
-
-.characterList > .characterList-animation {
+.character-list > .character-list-animation-container {
 	display: flex;
 	flex-flow: wrap;
 }
 
-.characterList > .characterList-animation > * {
-	margin: 10px;
+@media (max-width: 500px) {
+	.character-list > .character-list-animation-container {
+		flex-flow: column;
+	}
+}
+
+
+
+.character-list > .character-list-animation-container > * {
+	width: calc( 100% * .25 - 2%);
+}
+
+@media (max-width: 500px) {
+	.character-list > .character-list-animation-container > * {
+		width: 100%;
+	}
 }
