--- a/app/src/style/character.scss
+++ b/app/src/style/character.scss
@@ -1,21 +1,23 @@
 .character-card {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	min-width: 250px;
-	width: 250px;
+	display: block;
 	height: 300px;
 	background: white;
 	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
 				0 1px 10px 0 rgba(0, 0, 0, 0.12),
 				0 2px 4px -1px rgba(0, 0, 0, 0.4);
 }
-
-.character-card-stats {
-
+@media (max-width: 500px) {
+	.character-card {
+		height: 100px;
+	}
 }
 
-
+.character-card-inner {
+	display: flex;
+	height: 100%;
+	flex-direction: column;
+	justify-content: space-between;
+}
 
 .character-card-name {
 	font-family: 'Roboto Condensed', sans-serif;
@@ -28,8 +30,8 @@
 	overflow: hidden;
 }
 
-
-.characterSection {
-	position: relative;
+@media (max-width: 500px) {
+	.character-card-name {
+		font-size: 20px;
+	}
 }
-
