--- a/app/src/style/player.scss
+++ b/app/src/style/player.scss
@@ -4,42 +4,34 @@
 	overflow: auto;
 }
 
-
-
 .player {
 	display: flex;
-	margin: 50px 0;
+	flex-flow: row;
+	margin: 50px 0 20px 0;
 }
 
-.player-name {
-	font-family: 'Roboto', sans-serif;
-	font-weight: 100;
-	/*font-style: italic;*/
-	font-size: 40px;
-	color: rgba( 255, 255, 255, 1);
+@media (max-width: 500px) {
+	.player {
+		flex-flow: column;
+		text-align: center;
+		margin: 20px;
+	}
 }
 
 .player-avatar {
 	width: 100%;
 }
 
+@media (max-width: 500px) {
+	.player-avatar > img {
+		border-radius: 10px;
+	}
+}
+
 .player-header {
 	display: block;
 	width: 100%;
 	position: relative;
-}
-
-
-
-.player-sr > span:first-of-type {
-	font-family: 'Roboto', sans-serif;
-	font-weight: 100;
-	/*font-style: italic;*/
-	font-size: 32px;
-}
-
-.player-sr > span:nth-of-type(2) {
-	color: rgba( 255, 255, 255, 8);
 }
 
 .player-bg {
@@ -54,18 +46,25 @@
 //player description
 
 p.player-description {
-	margin: 25px 0 0 25px;
+	margin: 25px;
 	color: rgba( 255, 255, 255, .9 );
 	font-size: 34px;
 	font-family: 'Roboto', sans-serif;
-	/*font-style: italic;*/
 	font-weight: 100;
+	text-align: left;
 }
 
-p.player-description .player-description-highlight {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 36px;
-	font-weight: 700;
+@media (max-width: 500px) {
+	p.player-description {
+		font-size: 24px;
+		margin: 10px;
+	}
+}
 
+.player-description-highlight {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 28px;
+	font-weight: 700;
+	transition: all ease-in-out .5s;
 }
 
