small animation changes

--- a/app/src/style/character.scss
+++ b/app/src/style/character.scss
@@ -5,13 +5,26 @@
 }
 
 .character-card {
+	color: #4B4F56;
 	display: block;
 	height: 300px;
 	background: white;
-	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
-				0 1px 10px 0 rgba(0, 0, 0, 0.12),
-				0 2px 4px -1px rgba(0, 0, 0, 0.4);
+
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+                  0 1px 5px 0 rgba(0, 0, 0, 0.12),
+                  0 3px 1px -2px rgba(0, 0, 0, 0.2);
+
+	transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1), transform 0.20s ease-in-out;
 }
+
+.character-card:hover {
+	transition-delay: 0s !important;
+	transform: translate( 0, -10px );
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+				0  6px 30px 5px rgba(0, 0, 0, 0.12),
+				0  8px 10px -5px rgba(0, 0, 0, 0.4);
+}
+
 @media (max-width: 500px) {
 	.character-card {
 		height: 100px;
@@ -40,4 +53,23 @@
 	.character-card-name {
 		font-size: 20px;
 	}
+}
+
+.character-card-stats {
+	padding: 5px;
+
+	border-top: 1px solid #E9EBEE
+}
+
+
+.character-tile {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+}
+
+
+.character-chart {
+	background: #555D5A;
+
 }
