--- a/app/src/style/stat.scss
+++ b/app/src/style/stat.scss
@@ -26,9 +26,11 @@
 	// font-weight: 100;
 	font-size: 24px;
 	display: block;
+	user-select: none;
 }
 
 .stat-small-name {
 	font-size: 18px;
 	display: block;
+	user-select: none;
 }
