ripple animation fixed. Handles multiple clicks now.
added a mountName prop to the animations component. No more need to do the animation on the child mounting / componentdidupdate if all we care about is mounting.

--- a/app/src/style/characterList.scss
+++ b/app/src/style/characterList.scss
@@ -1,25 +1,25 @@
-.character-list > .character-list-animation-container {
+.character-list {
 	display: flex;
 	flex-flow: wrap;
 	// margin: -20px;
 }
 
 @media (max-width: 500px) {
-	.character-list > .character-list-animation-container {
+	.character-list {
 		flex-flow: column;
 	}
 }
 
 
 
-.character-list > .character-list-animation-container > * {
+.character-list > * {
 	width: 25%;
 	padding: 20px;
 	box-sizing: border-box;
 }
 
 @media (max-width: 500px) {
-	.character-list > .character-list-animation-container > * {
+	.character-list > * {
 		width: 100%;
 	}
 }
