--- a/app/src/style/app.scss
+++ b/app/src/style/app.scss
@@ -10,6 +10,7 @@ body {
 	width: 1105px;
 	margin: 0 auto;
 	position: relative;
+	overflow: hidden;
 }
 
   @media (max-width: 500px) {
@@ -22,9 +23,9 @@ body {
 
 
 .app > .content {
-	margin: 0 auto;
-	max-width: 1105px;
-	position: relative;
+		margin: 0 auto;
+		max-width: 1105px;
+		position: relative;
 }
 
 
