--- a/app/src/style/app.scss
+++ b/app/src/style/app.scss
@@ -3,7 +3,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 	margin: 0;
 	padding: 0;
-	background: #FCFCFC;
+	// background: #D1D1D0;
 }
 
 .content {
@@ -26,5 +26,22 @@ body {
 		max-width: 1105px;
 		position: relative;
 }
+
+//https://material.io/guidelines/style/color.html#color-color-palette
+
+	// --paper-amber-50: #fff8e1;
+  //   --paper-amber-100: #ffecb3;
+  //   --paper-amber-200: #ffe082;
+  //   --paper-amber-300: #ffd54f;
+  //   --paper-amber-400: #ffca28;
+  //   --paper-amber-500: #ffc107;
+  //   --paper-amber-600: #ffb300;
+  //   --paper-amber-700: #ffa000;
+  //   --paper-amber-800: #ff8f00;
+  //   --paper-amber-900: #ff6f00;
+  //   --paper-amber-a100: #ffe57f;
+  //   --paper-amber-a200: #ffd740;
+  //   --paper-amber-a400: #ffc400;
+  //   --paper-amber-a700: #ffab00;
 
 
