--- a/app/src/style/player.scss
+++ b/app/src/style/player.scss
@@ -50,6 +50,15 @@
 	height: 100%;
 }
 
+.player-bg-color-splash {
+	height: 6px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-image: linear-gradient(150deg,#FF6F00 15%,#ffab00 70%,#ffca28 94%);
+}
+
 
 
 //player description
