--- a/app/src/style/app.scss
+++ b/app/src/style/app.scss
@@ -6,6 +6,34 @@ body {
 	// background: #D1D1D0;
 }
 
+
+.app {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.app-main {
+		display: flex;
+		flex-flow: column;
+		height: 100%;
+}
+
+.app-content-container {
+	flex: 1;
+	flex-basis: 0.000001px; // ?
+	overflow-x: hidden;
+	overflow-y: auto;
+	position: relative;
+}
+
+
 .content {
 	width: 1105px;
 	margin: 0 auto;
