--- a/app/src/style/app.scss
+++ b/app/src/style/app.scss
@@ -3,7 +3,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 	margin: 0;
 	padding: 0;
-	// background: #D1D1D0;
+	background: #DCE2E8;
 }
 
 
@@ -36,6 +36,7 @@ body {
 
 .content {
 	width: 1105px;
+	height: 100%;
 	margin: 0 auto;
 	position: relative;
 }
@@ -73,3 +74,49 @@ body {
   //   --paper-amber-a700: #ffab00;
 
 
+.searchBox {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	flex-flow: wrap;
+}
+
+.searchBox input {
+		height: 45px;
+		background: rgba( 255, 255, 255, .3 );
+		border: none;
+		font-family: 'Roboto Condensed', sans-serif;
+		font-size: 30px;
+		font-weight: 700;
+		font-style: italic;
+		text-align: center;
+		color: rgba( 255, 255, 255, .8 );
+}
+
+  @media (max-width: 500px) {
+		.searchBox input {
+			flex-basis: 100%;
+		}
+	}
+
+.searchBox button {
+	border: none;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 24px;
+	font-weight: 700;
+	font-style: italic;
+	text-align: center;
+	color: white;
+	background: rgb(255,111,0);
+	height: 45px;
+	margin-right: 5px;
+}
+
+.searchBox button.secondary {
+	background: rgba(255,111,0,.5)
+}
+
+.searchBox button:disabled {
+	background: grey;
+}
