--- a/app/src/style/header.scss
+++ b/app/src/style/header.scss
@@ -1,8 +1,18 @@
-.gopher-header {
+
+.gopherHeader {
 	z-index: 3;
 	overflow: hidden;
 	position: relative;
+	height: 200px;
+	transition: height 250ms ease-in-out;
+}
 
+.gopherHeader-is-search {
+	height: 100%;
+}
+
+.gopherHeader-is-search > .gopher-header-inner {
+	height: 100%;
 }
 
 .gopher-header-inner {
@@ -11,7 +21,7 @@
 }
 
 .gopher-header-bg {
-	background: #232A2D;
+	background: #2C3A4B;
 	position: absolute;
 	width: 100%;
 	height: 100%;
