--- a/app/src/style/player.scss
+++ b/app/src/style/player.scss
@@ -1,39 +1,48 @@
 
 .playerSection {
+	height: 100%;
 	position: relative;
-	overflow: auto;
 }
 
 .player {
 	display: flex;
 	flex-flow: row;
-	margin: 50px 0 20px 0;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
 }
 
 @media (max-width: 500px) {
 	.player {
 		flex-flow: column;
 		text-align: center;
-		margin: 20px;
+		align-items: center;
 	}
 }
 
 .player-avatar {
 	position: relative;
-	max-width: 128px;
-	max-height: 128px;
-
+	min-width: 128px;
+	min-height: 128px;
 }
 
-.player-avatar-scrim {
-	position: absolute;
+.player-avatar > img {
 	width: 100%;
-	height: 100%;
+	height: auto;
 }
 
 @media (max-width: 500px) {
+	.player-avatar {
+		max-width: 64px;
+		max-height: 64px;
+		min-width: 0;
+		min-height: 0;
+
+	}
+
 	.player-avatar > img {
 		border-radius: 10px;
+
 	}
 }
 
@@ -44,6 +53,9 @@
 }
 
 
+.player-gridItem {
+}
+
 
 
 
@@ -51,7 +63,7 @@
 
 //player description
 
-p.player-description {
+p.playerDescription {
 	margin: 25px;
 	color: rgba( 255, 255, 255, .9 );
 	font-size: 26px;
@@ -61,15 +73,18 @@ p.player-description {
 }
 
 @media (max-width: 500px) {
-	p.player-description {
-		font-size: 24px;
+	p.playerDescription {
+		font-size: 18px;
 		margin: 10px;
+	}
+
+	span.playerDescription-highlight {
+		font-size: 18px;
 	}
 }
 
-.player-description-highlight {
+span.playerDescription-highlight {
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 32px;
 	font-weight: 700;
 	transition: all ease-in-out .5s;
 }
